--- a/resources/styles.css
+++ b/resources/styles.css
@@ -22,6 +22,10 @@ input{
     outline: 0;
 }
 
+.box{
+    display: none;
+}
+
 .fadeable {
     opacity: 0;
 }
@@ -35,3 +39,11 @@ input{
         -webkit-transition: opacity 2s;
 }
 
+.fade-out {
+    opacity: 0;
+    transition:             opacity 2s;
+        -moz-transition:    opacity 2s;
+        -ms-transition:     opacity 2s;
+        -o-transition:      opacity 2s;
+        -webkit-transition: opacity 2s;
+}
