--- a/resources/styles.css
+++ b/resources/styles.css
@@ -7,6 +7,11 @@
     font-size: 1.5rem;
 }
 
+.text--option{
+    color: black;
+    text-decoration: none;
+}
+
 .container{
     max-width: 1280px;
     height: 100%;
@@ -22,8 +27,11 @@ input{
     outline: 0;
 }
 
-.box{
+.box,
+canvas{
     display: none;
+    max-width: 100%;
+    max-height: 700px;
 }
 
 .fadeable {
